--- a/spring-tours/src/main/resources/application.yml
+++ b/spring-tours/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 server:
   port: 8080
+
 spring:
   application:
     name: spring-tours
@@ -11,8 +12,52 @@ spring:
   h2:
     console:
       enabled: true
+      path: /h2-console
+      settings:
+        web-allow-others: true
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: update
     show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        generate_statistics: true
+
+opentelemetry:
+  sdk:
+    resource-attributes: service.name=${spring.application.name}
+  exporter:
+    otlp:
+      endpoint: http://localhost:4317
+      protocol: grpc
+      timeout: 10000
+  
+management:
+  otel:
+    metrics:
+      export:
+        prometheus:
+          enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  health:
+    readiness-state:
+      enabled: true
+    liveness-state:
+      enabled: true
+  endpoint:
+    shutdown:
+      access: unrestricted
+    health:
+      probes:
+        enabled: true
+  info:
+    env:
+      enabled: true
+  metrics:
+    tags:
+      application: ${spring.application.name}
