Added Eureka Server

--- a/spring-tours/src/main/resources/application.yml
+++ b/spring-tours/src/main/resources/application.yml
@@ -25,6 +25,15 @@ spring:
         format_sql: true
         generate_statistics: true
 
+eureka:
+  instance:
+    preferIpAddress: true
+  client:
+    fetchRegistry: true
+    registerWithEureka: true
+    serviceUrl:
+      defaultZone: http://localhost:8070/eureka/
+
 opentelemetry:
   sdk:
     resource-attributes: service.name=${spring.application.name}
